make2 can compile, but not execute